added a green button

--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <p>This is a description</p>
 
     <em>Bugfix From sushil subedi</em>
+    <button onclick="" style="background-color: green; color: white">
+      Send Data
+    </button>
   </body>
 </html>
