add blue button

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
     <h1>Hello OCEM</h1>
     <p>This is a description</p>
+    <button style="background-color: blue; color:gray">OK</button>
 </body>
 </html>
