add input field

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <h1>Hello OCEM</h1>
     <p>This is a description</p>
     <em>Bugfix From sushil subedi</em>
+    <input type="text"/>
     <button style="background-color: blue; color:gray">OK</button>
   </body>
 </html>
